成本核算get接口及报表生成接口逻辑