@@ -34,19 +34,24 @@ public class ExcelUtils {
                                  Class<T> head, List<T> data) throws IOException {
         // 输出 Excel
         EasyExcel.write(response.getOutputStream(), head)
-                .autoCloseStream(false) // 不要自动关闭，交给 Servlet 自己处理
-                .registerWriteHandler(new LongestMatchColumnWidthStyleStrategy()) // 基于 column 长度，自动适配。最大 255 宽度
-                .registerWriteHandler(new SelectSheetWriteHandler(head)) // 基于固定 sheet 实现下拉框
-                .registerConverter(new LongStringConverter()) // 避免 Long 类型丢失精度
+                // 不要自动关闭，交给 Servlet 自己处理
+                .autoCloseStream(false)
+                // 基于 column 长度，自动适配。最大 255 宽度
+                .registerWriteHandler(new LongestMatchColumnWidthStyleStrategy())
+                // 基于固定 sheet 实现下拉框
+                .registerWriteHandler(new SelectSheetWriteHandler(head))
+                // 避免 Long 类型丢失精度
+                .registerConverter(new LongStringConverter())
                 .sheet(sheetName).doWrite(data);
         // 设置 header 和 contentType。写在最后的原因是，避免报错时，响应 contentType 已经被修改了
-        response.addHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(filename, StandardCharsets.UTF_8.name()));
+        response.addHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(filename, StandardCharsets.UTF_8));
         response.setContentType("application/vnd.ms-excel;charset=UTF-8");
     }
 
     public static <T> List<T> read(MultipartFile file, Class<T> head) throws IOException {
         return EasyExcel.read(file.getInputStream(), head, null)
-                .autoCloseStream(false)  // 不要自动关闭，交给 Servlet 自己处理
+                // 不要自动关闭，交给 Servlet 自己处理
+                .autoCloseStream(false)
                 .doReadAllSync();
     }
 
